# backend/src/swagger.json
@@ -1,39 +1,226 @@
 {
-	"swagger": "2.0",
-	"info": {
-		"title": "Pretest Coding",
-		"version": "1.0",
-		"description": "This is a simple CRUD API application made with Express and documented with Swagger",
-		"contact": {
-			"name": "Mr. Thanit Netprokaew",
-			"url": "https://github.com/noom1009",
-			"email": "noom1009@email.com"
-		}
-	},
-	"consumes": [
-		"application/json"
-	],
-	"produces": [
-		"application/json"
-	],
-	"paths": {
-		"/dashboard/": {
-			"parameters": [],
-			"get": {
-				"summary": "dashboard",
-				"description": "ข้อมูลเมล็ดพันธุ์ข้าวที่มีจำหน่าย",
-				"produces": [
-					"application/json"
-				],
-				"responses": {
-					"202": {
-						"description": "200 response",
-						"examples": {
-							"application/json": "{ '_id': 1, 'Seed_RepDate': 25640623, 'Seed_Year':2564, 'Seeds_YearWeek':26, 'Seed_Varity':'กข15','Seed_RDCSD':'พะเยา','Seed_Stock2Sale':28675,'Seed_Season':1, 'Seed_Crop_Year':2564  }"
-						}
-					}
-				}
-			}
-		}
-	}
+  "swagger": "2.0",
+  "info": {
+    "title": "Pretest Coding",
+    "version": "1.0",
+    "description": "This is a simple CRUD API application made with Express and documented with Swagger",
+    "contact": {
+      "name": "Mr. Thanit Netprokaew",
+      "url": "https://github.com/noom1009",
+      "email": "noom1009@email.com"
+    }
+  },
+  "host": "localhost:4000",
+  "basePath": "/",
+  "tags": [
+    {
+      "name": "Dashboard",
+      "description": "Dashboard API"
+    },
+    {
+      "name": "CRUD",
+      "description": "CRUD API"
+    }
+  ],
+  "schemes": ["http"],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
+  "definitions": {
+    "Dashboard": {
+      "required": ["_id"],
+      "properties": {
+        "_id": {
+          "type": "string",
+          "uniqueItems": true,
+          "description": "รายละเอียด"
+        },
+        "Seed_RepDate": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_Year": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seeds_YearWeek": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_Varity": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_RDCSD": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_Stock2Sale": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_Season": {
+          "type": "string",
+          "description": "รายละเอียด"
+        },
+        "Seed_Crop_Year": {
+          "type": "string",
+          "description": "รายละเอียด"
+        }                
+      }
+    }
+  },  
+  "paths": {
+    "/dashboard/": {
+      "parameters": [],
+      "get": {
+        "tags": ["Dashboard"],
+        "summary": "dashboard",
+        "description": "ข้อมูลเมล็ดพันธุ์ข้าวที่มีจำหน่าย",
+        "produces": ["application/json"],
+        "responses": {
+          "202": {
+            "description": "200 response",
+            "examples": {
+              "application/json": "{ '_id': 1, 'Seed_RepDate': 25640623, 'Seed_Year':2564, 'Seeds_YearWeek':26, 'Seed_Varity':'กข15','Seed_RDCSD':'พะเยา','Seed_Stock2Sale':28675,'Seed_Season':1, 'Seed_Crop_Year':2564  }"
+            }
+          }
+        }
+      }
+    },
+    "/dashboard/code/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "required": true,
+          "in": "path",
+          "type": "string",
+          "description": "ค้นหาด้วย รหัส"
+        }
+      ],
+      "get": {
+        "operationId": "id",
+        "tags": ["Dashboard"],
+        "summary": "ค้นหาด้วย รหัส",
+        "description": "ค้นหาด้วย รหัส _id ",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "examples": {
+              "application/json": "{ '_id': 1, 'Seed_RepDate': 25640623, 'Seed_Year':2564, 'Seeds_YearWeek':26, 'Seed_Varity':'กข15','Seed_RDCSD':'พะเยา','Seed_Stock2Sale':28675,'Seed_Season':1, 'Seed_Crop_Year':2564  }"
+            }
+          }
+        }
+      }
+    },
+    "/dashboard/name/{name}": {
+      "parameters": [
+        {
+          "name": "name",
+          "required": true,
+          "in": "path",
+          "type": "string",
+          "description": "ค้นหาด้วย จังหวัด (Seed_RDCSD)"
+        }
+      ],
+      "get": {
+        "operationId": "name",
+        "tags": ["Dashboard"],
+        "summary": "จังหวัด",
+        "description": "ค้นหาด้วย จังหวัด (Seed_RDCSD)",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "200 response",
+            "examples": {
+              "application/json": "{ '_id': 1, 'Seed_RepDate': 25640623, 'Seed_Year':2564, 'Seeds_YearWeek':26, 'Seed_Varity':'กข15','Seed_RDCSD':'พะเยา','Seed_Stock2Sale':28675,'Seed_Season':1, 'Seed_Crop_Year':2564  }"
+            }
+          }
+        }
+      }
+    },
+    "/addDashboard": {
+      "post": {
+        "tags": ["CRUD"],
+        "description": "Create new Data in system",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User that we want to create",
+            "schema": {
+              "$ref": "#/definitions/Dashboard"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "New Data is created",
+            "schema": {
+              "$ref": "#/definitions/Dashboard"
+            }
+          }
+        }
+      }
+    },
+    "/updateDashboard/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of Data that we want to find",
+          "type": "string"
+        }
+      ],
+      "put": {
+        "summary": "Update Data with give ID",
+        "tags": ["CRUD"],
+        "parameters": [
+          {
+            "name": "Dashboard",
+            "in": "body",
+            "description": "Data with new values of properties",
+            "schema": {
+              "$ref": "#/definitions/Dashboard"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is updated",
+            "schema": {
+              "$ref": "#/definitions/Dashboard"
+            }
+          }
+        }
+      }
+    },
+    "/user/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of Data that we want to find",
+          "type": "integer"
+        }
+      ],
+      "delete": {
+        "summary": "Delete Data with given ID",
+        "tags": [
+          "CRUD"
+        ],
+        "responses": {
+          "200": {
+            "description": "Data is deleted",
+            "schema": {
+              "$ref": "#/definitions/Dashboard"
+            }
+          }
+        }
+      }
+    }   
+  }
 }
